Thu Jul  9 18:21:55 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * DDS_release_notes.txt:

          Noted Windows Mobile and ACE_USES_WCHAR support.

        * MPC/modules/IDL2JNIHelper.pm:

          Fixed Perl syntax error.

        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.cpp:
        * dds/DCPS/transport/framework/TransportHeader.h:
        * dds/DCPS/transport/framework/TransportReceiveStrategy.cpp:

          The DataSampleHeader is now variable-length so we need a way for the
          transport to know if it has enough bytes queued up to make a header.
          This should fix the intermittent LivelinessTest failure, and in
          general will make sure that the DCPS layer gets control messages
          (0 bytes of sample data) right away.

        * dds/DCPS/transport/framework/PriorityKey.h:
        * dds/DCPS/transport/framework/PriorityKey.inl:

          Removed the virtual destructor, this is a value type.

        * DevGuideExamples/DCPS/Messenger/run_ns_test.pl:
        * examples/DCPS/Messenger_Imr/run_test.pl:

          Increase timeouts for running TAO utilities (nsadd, tao_imr).

        * tests/DCPS/FooTest3_0/run_test.pl:

          Typo.

Thu Jul  9 17:47:10 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/BuiltInTopicTest/monitor.cpp:

          Made monitor 2 wait for monitor 1 finish to avoid fixed time delay
          (15 seconds) may not be enough for monitor 1 get bit data before
          monitor 2 start.

Thu Jul  9 05:30:38 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:
        * dds/tools/opendds_repo_ctl:
        * java/jms/compat/build.xml:
        * performance-tests/Bench/tools/mkpkg:

          Renamed opendds_ir_ctl tool to opendds_repo_ctl.

Thu Jul  9 05:16:03 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * MPC/modules/IDL2JNIHelper.pm:
        * MPC/modules/IDLBase.pm:
